fix country field spacing

--- a/src/app/public/modules/input-box/input-box.component.scss
+++ b/src/app/public/modules/input-box/input-box.component.scss
@@ -337,7 +337,7 @@ sky-input-box {
       }
 
       .sky-input-box-label-wrapper:empty + .sky-form-control,
-      .sky-input-box-label-wrapper:empty + *:first-child .sky-form-control {
+      .sky-input-box-label-wrapper:empty + * .sky-form-control {
         margin-top: 0;
         padding-top: $sky-theme-modern-space-sm;
       }
